--- a/practica/untitled_pFinal/mainwindow.ui
+++ b/practica/untitled_pFinal/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1207</width>
+    <width>1301</width>
     <height>603</height>
    </rect>
   </property>
@@ -17,10 +17,10 @@
    <widget class="QScrollArea" name="Grafica">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>60</y>
-      <width>691</width>
-      <height>471</height>
+      <x>20</x>
+      <y>20</y>
+      <width>711</width>
+      <height>531</height>
      </rect>
     </property>
     <property name="widgetResizable">
@@ -31,16 +31,65 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>689</width>
-       <height>469</height>
+       <width>709</width>
+       <height>529</height>
       </rect>
      </property>
+     <widget class="QGraphicsView" name="Grafica_2">
+      <property name="geometry">
+       <rect>
+        <x>15</x>
+        <y>40</y>
+        <width>681</width>
+        <height>481</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>330</x>
+        <y>10</y>
+        <width>47</width>
+        <height>14</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>GRÁFICA</string>
+      </property>
+     </widget>
+     <widget class="Line" name="line_6">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>301</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="Line" name="line_7">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>10</y>
+        <width>311</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QScrollArea" name="caracteristicasCuerpos">
     <property name="geometry">
      <rect>
-      <x>810</x>
+      <x>850</x>
       <y>20</y>
       <width>321</width>
       <height>241</height>
@@ -88,7 +137,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>40</y>
+        <y>60</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -101,7 +150,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>70</y>
+        <y>80</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -127,7 +176,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>130</y>
+        <y>140</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -152,7 +201,7 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>86</x>
+        <x>70</x>
         <y>10</y>
         <width>171</width>
         <height>20</height>
@@ -162,11 +211,11 @@
        <string>DATOS PARA UN NUEVO PLANETA</string>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="posicionInicialX">
+     <widget class="QDoubleSpinBox" name="posicionInicialX_C">
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>40</y>
+        <y>60</y>
         <width>121</width>
         <height>21</height>
        </rect>
@@ -178,11 +227,11 @@
        <double>80000.000000000000000</double>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="posicionInicialY">
+     <widget class="QDoubleSpinBox" name="posicionInicialY_C">
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>70</y>
+        <y>80</y>
         <width>121</width>
         <height>21</height>
        </rect>
@@ -194,7 +243,7 @@
        <double>80000.000000000000000</double>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="masa">
+     <widget class="QDoubleSpinBox" name="masa_C">
       <property name="geometry">
        <rect>
         <x>170</x>
@@ -207,11 +256,11 @@
        <double>9999999999999999827367757839185598317239782875580932278577147150336.000000000000000</double>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="velocidadInicialX">
+     <widget class="QDoubleSpinBox" name="velocidadInicialX_C">
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>130</y>
+        <y>140</y>
         <width>121</width>
         <height>21</height>
        </rect>
@@ -223,7 +272,7 @@
        <double>10000000000000000213204190094543968723012578712679649467743338496.000000000000000</double>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="velocidadInicialY">
+     <widget class="QDoubleSpinBox" name="velocidadInicialY_C">
       <property name="geometry">
        <rect>
         <x>170</x>
@@ -239,14 +288,56 @@
        <double>10000000000000000213204190094543968723012578712679649467743338496.000000000000000</double>
       </property>
      </widget>
+     <widget class="QDoubleSpinBox" name="radio_C">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>120</y>
+        <width>121</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="minimum">
+       <double>-9999999999999999493871352970740188669636450110134100730839040.000000000000000</double>
+      </property>
+      <property name="maximum">
+       <double>10000000000000000213204190094543968723012578712679649467743338496.000000000000000</double>
+      </property>
+     </widget>
+     <widget class="QLabel" name="radio_label">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>120</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Radio:</string>
+      </property>
+     </widget>
+     <widget class="Line" name="line_14">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>30</y>
+        <width>281</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QScrollArea" name="seguimientoCuerpos">
     <property name="geometry">
      <rect>
-      <x>759</x>
-      <y>279</y>
-      <width>431</width>
+      <x>740</x>
+      <y>280</y>
+      <width>541</width>
       <height>271</height>
      </rect>
     </property>
@@ -258,14 +349,14 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>429</width>
+       <width>539</width>
        <height>269</height>
       </rect>
      </property>
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>110</x>
+        <x>150</x>
         <y>10</y>
         <width>241</width>
         <height>20</height>
@@ -280,7 +371,7 @@
        <rect>
         <x>10</x>
         <y>30</y>
-        <width>411</width>
+        <width>521</width>
         <height>20</height>
        </rect>
       </property>
@@ -288,20 +379,20 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
-     <widget class="QTextBrowser" name="datosAceleracionY">
+     <widget class="QTextBrowser" name="datosVelocidadX">
       <property name="geometry">
        <rect>
-        <x>330</x>
+        <x>390</x>
         <y>70</y>
-        <width>81</width>
+        <width>61</width>
         <height>192</height>
        </rect>
       </property>
      </widget>
-     <widget class="QTextBrowser" name="datosCuerpos_2">
+     <widget class="QTextBrowser" name="datosNombres">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>10</x>
         <y>70</y>
         <width>41</width>
         <height>192</height>
@@ -311,7 +402,7 @@
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>10</x>
         <y>50</y>
         <width>41</width>
         <height>16</height>
@@ -324,7 +415,7 @@
      <widget class="QTextBrowser" name="datosPosicionX">
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>70</x>
         <y>70</y>
         <width>61</width>
         <height>192</height>
@@ -334,22 +425,22 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>70</x>
         <y>50</y>
         <width>61</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>Posición X</string>
+       <string>  Posición X</string>
       </property>
      </widget>
      <widget class="Line" name="line_2">
       <property name="geometry">
        <rect>
-        <x>43</x>
+        <x>50</x>
         <y>50</y>
-        <width>51</width>
+        <width>21</width>
         <height>211</height>
        </rect>
       </property>
@@ -360,9 +451,9 @@
      <widget class="QTextBrowser" name="datosAceleracionX">
       <property name="geometry">
        <rect>
-        <x>240</x>
+        <x>230</x>
         <y>70</y>
-        <width>71</width>
+        <width>61</width>
         <height>192</height>
        </rect>
       </property>
@@ -370,22 +461,22 @@
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>160</x>
+        <x>150</x>
         <y>50</y>
         <width>61</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>Posición Y</string>
+       <string>  Posición Y</string>
       </property>
      </widget>
      <widget class="Line" name="line_3">
       <property name="geometry">
        <rect>
-        <x>133</x>
+        <x>130</x>
         <y>50</y>
-        <width>31</width>
+        <width>21</width>
         <height>211</height>
        </rect>
       </property>
@@ -396,7 +487,7 @@
      <widget class="Line" name="line_4">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>200</x>
         <y>50</y>
         <width>41</width>
         <height>211</height>
@@ -409,9 +500,9 @@
      <widget class="Line" name="line_5">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>280</x>
         <y>50</y>
-        <width>31</width>
+        <width>41</width>
         <height>211</height>
        </rect>
       </property>
@@ -422,131 +513,112 @@
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>240</x>
+        <x>220</x>
         <y>50</y>
-        <width>71</width>
+        <width>81</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>Aceleración X</string>
+       <string>  Aceleración X</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>390</x>
         <y>50</y>
-        <width>71</width>
-        <height>16</height>
+        <width>61</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>Aceleración Y</string>
+       <string>Velocidad X</string>
       </property>
      </widget>
      <widget class="QTextBrowser" name="datosPosicionY">
       <property name="geometry">
        <rect>
-        <x>160</x>
+        <x>150</x>
         <y>70</y>
         <width>61</width>
         <height>192</height>
        </rect>
       </property>
      </widget>
+     <widget class="QTextBrowser" name="datosAceleracionY">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>70</y>
+        <width>61</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QTextBrowser" name="datosVelocidadY">
+      <property name="geometry">
+       <rect>
+        <x>470</x>
+        <y>70</y>
+        <width>61</width>
+        <height>192</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="Line" name="line_12">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>50</y>
+        <width>41</width>
+        <height>211</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>300</x>
+        <y>50</y>
+        <width>81</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>  Aceleración Y</string>
+      </property>
+     </widget>
+     <widget class="Line" name="line_13">
+      <property name="geometry">
+       <rect>
+        <x>440</x>
+        <y>50</y>
+        <width>41</width>
+        <height>211</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>470</x>
+        <y>50</y>
+        <width>61</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Velocidad Y</string>
+      </property>
+     </widget>
     </widget>
-   </widget>
-   <widget class="Line" name="line_8">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>711</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>350</x>
-      <y>30</y>
-      <width>47</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>GRÁFICA</string>
-    </property>
-   </widget>
-   <widget class="Line" name="line_6">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>30</y>
-      <width>301</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="line_7">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>30</y>
-      <width>301</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="line_9">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>525</y>
-      <width>711</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="line_10">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>20</width>
-      <height>521</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="line_11">
-    <property name="geometry">
-     <rect>
-      <x>720</x>
-      <y>20</y>
-      <width>20</width>
-      <height>521</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -554,7 +626,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1207</width>
+     <width>1301</width>
      <height>22</height>
     </rect>
    </property>
