--- a/practica/untitled_pFinal/mainwindow.ui
+++ b/practica/untitled_pFinal/mainwindow.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1301</width>
-    <height>603</height>
+    <width>1091</width>
+    <height>594</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Simulador</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QScrollArea" name="Grafica">
+   <widget class="QScrollArea" name="Grafica_3">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -35,7 +35,7 @@
        <height>529</height>
       </rect>
      </property>
-     <widget class="QGraphicsView" name="Grafica_2">
+     <widget class="QGraphicsView" name="Grafica">
       <property name="geometry">
        <rect>
         <x>15</x>
@@ -89,7 +89,7 @@
    <widget class="QScrollArea" name="caracteristicasCuerpos">
     <property name="geometry">
      <rect>
-      <x>850</x>
+      <x>750</x>
       <y>20</y>
       <width>321</width>
       <height>241</height>
@@ -159,24 +159,11 @@
        <string>Posicion inicial en Y:</string>
       </property>
      </widget>
-     <widget class="QLabel" name="masa_label">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>100</y>
-        <width>111</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Masa:</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="velocidadInicialX_label">
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>140</y>
+        <y>120</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -189,7 +176,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>160</y>
+        <y>140</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -204,7 +191,7 @@
         <x>70</x>
         <y>10</y>
         <width>171</width>
-        <height>20</height>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
@@ -243,24 +230,11 @@
        <double>80000.000000000000000</double>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="masa_C">
-      <property name="geometry">
-       <rect>
-        <x>170</x>
-        <y>100</y>
-        <width>121</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="maximum">
-       <double>9999999999999999827367757839185598317239782875580932278577147150336.000000000000000</double>
-      </property>
-     </widget>
      <widget class="QDoubleSpinBox" name="velocidadInicialX_C">
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>140</y>
+        <y>120</y>
         <width>121</width>
         <height>21</height>
        </rect>
@@ -276,7 +250,7 @@
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>160</y>
+        <y>140</y>
         <width>121</width>
         <height>21</height>
        </rect>
@@ -288,17 +262,17 @@
        <double>10000000000000000213204190094543968723012578712679649467743338496.000000000000000</double>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="radio_C">
+     <widget class="QDoubleSpinBox" name="masa_C">
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>120</y>
+        <y>100</y>
         <width>121</width>
         <height>21</height>
        </rect>
       </property>
       <property name="minimum">
-       <double>-9999999999999999493871352970740188669636450110134100730839040.000000000000000</double>
+       <double>0.000000000000000</double>
       </property>
       <property name="maximum">
        <double>10000000000000000213204190094543968723012578712679649467743338496.000000000000000</double>
@@ -308,16 +282,88 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>120</y>
+        <y>100</y>
         <width>111</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>Radio:</string>
+       <string>Masa:</string>
       </property>
      </widget>
      <widget class="Line" name="line_14">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>30</y>
+        <width>281</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="nombre_C">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>160</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="nombre">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>160</y>
+        <width>111</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Nombre del planeta:</string>
+      </property>
+     </widget>
+    </widget>
+   </widget>
+   <widget class="QScrollArea" name="seguimientoCuerpos">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>280</y>
+      <width>321</width>
+      <height>271</height>
+     </rect>
+    </property>
+    <property name="widgetResizable">
+     <bool>true</bool>
+    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents_3">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>319</width>
+       <height>269</height>
+      </rect>
+     </property>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>10</y>
+        <width>241</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>   SEGUIMIENTO DE LOS PLANETAS EN ORBITA</string>
+      </property>
+     </widget>
+     <widget class="Line" name="line">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -330,292 +376,14 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
-    </widget>
-   </widget>
-   <widget class="QScrollArea" name="seguimientoCuerpos">
-    <property name="geometry">
-     <rect>
-      <x>740</x>
-      <y>280</y>
-      <width>541</width>
-      <height>271</height>
-     </rect>
-    </property>
-    <property name="widgetResizable">
-     <bool>true</bool>
-    </property>
-    <widget class="QWidget" name="scrollAreaWidgetContents_3">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>539</width>
-       <height>269</height>
-      </rect>
-     </property>
-     <widget class="QLabel" name="label_2">
+     <widget class="QListWidget" name="listWidget">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>10</y>
-        <width>241</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>  SEGUIMIENTO DE LOS PLANETAS EN ORBITA</string>
-      </property>
-     </widget>
-     <widget class="Line" name="line">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>30</y>
-        <width>521</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="QTextBrowser" name="datosVelocidadX">
-      <property name="geometry">
-       <rect>
-        <x>390</x>
-        <y>70</y>
-        <width>61</width>
+        <x>55</x>
+        <y>60</y>
+        <width>211</width>
         <height>192</height>
        </rect>
-      </property>
-     </widget>
-     <widget class="QTextBrowser" name="datosNombres">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>70</y>
-        <width>41</width>
-        <height>192</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_3">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>50</y>
-        <width>41</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Nombre</string>
-      </property>
-     </widget>
-     <widget class="QTextBrowser" name="datosPosicionX">
-      <property name="geometry">
-       <rect>
-        <x>70</x>
-        <y>70</y>
-        <width>61</width>
-        <height>192</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_4">
-      <property name="geometry">
-       <rect>
-        <x>70</x>
-        <y>50</y>
-        <width>61</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>  Posición X</string>
-      </property>
-     </widget>
-     <widget class="Line" name="line_2">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>50</y>
-        <width>21</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
-     <widget class="QTextBrowser" name="datosAceleracionX">
-      <property name="geometry">
-       <rect>
-        <x>230</x>
-        <y>70</y>
-        <width>61</width>
-        <height>192</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_5">
-      <property name="geometry">
-       <rect>
-        <x>150</x>
-        <y>50</y>
-        <width>61</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>  Posición Y</string>
-      </property>
-     </widget>
-     <widget class="Line" name="line_3">
-      <property name="geometry">
-       <rect>
-        <x>130</x>
-        <y>50</y>
-        <width>21</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
-     <widget class="Line" name="line_4">
-      <property name="geometry">
-       <rect>
-        <x>200</x>
-        <y>50</y>
-        <width>41</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
-     <widget class="Line" name="line_5">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>50</y>
-        <width>41</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_6">
-      <property name="geometry">
-       <rect>
-        <x>220</x>
-        <y>50</y>
-        <width>81</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>  Aceleración X</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_7">
-      <property name="geometry">
-       <rect>
-        <x>390</x>
-        <y>50</y>
-        <width>61</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Velocidad X</string>
-      </property>
-     </widget>
-     <widget class="QTextBrowser" name="datosPosicionY">
-      <property name="geometry">
-       <rect>
-        <x>150</x>
-        <y>70</y>
-        <width>61</width>
-        <height>192</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QTextBrowser" name="datosAceleracionY">
-      <property name="geometry">
-       <rect>
-        <x>310</x>
-        <y>70</y>
-        <width>61</width>
-        <height>192</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QTextBrowser" name="datosVelocidadY">
-      <property name="geometry">
-       <rect>
-        <x>470</x>
-        <y>70</y>
-        <width>61</width>
-        <height>192</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="Line" name="line_12">
-      <property name="geometry">
-       <rect>
-        <x>360</x>
-        <y>50</y>
-        <width>41</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_9">
-      <property name="geometry">
-       <rect>
-        <x>300</x>
-        <y>50</y>
-        <width>81</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>  Aceleración Y</string>
-      </property>
-     </widget>
-     <widget class="Line" name="line_13">
-      <property name="geometry">
-       <rect>
-        <x>440</x>
-        <y>50</y>
-        <width>41</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_10">
-      <property name="geometry">
-       <rect>
-        <x>470</x>
-        <y>50</y>
-        <width>61</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Velocidad Y</string>
       </property>
      </widget>
     </widget>
@@ -626,7 +394,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1301</width>
+     <width>1091</width>
      <height>22</height>
     </rect>
    </property>
