--- a/practica/untitled_pFinal/mainwindow.ui
+++ b/practica/untitled_pFinal/mainwindow.ui
@@ -10,6 +10,18 @@
     <height>594</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1091</width>
+    <height>594</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1091</width>
+    <height>594</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Simulador</string>
   </property>
@@ -376,7 +388,7 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
-     <widget class="QListWidget" name="listWidget">
+     <widget class="QListWidget" name="listaPlanetas">
       <property name="geometry">
        <rect>
         <x>55</x>
